# mercury-bank-rs

./: .openapi-generator-ignore  Cargo.toml  README.md
.openapi-generator/: FILES
docs/: About.md  AddressWithoutName.md  BeneficialOwner.md  BusinessContactDetails.md  DefaultApi.md  DomesticWireRoutingInfoRaw.md  ElectronicRoutingInfoRaw.md  FormationDetails.md  InlineObject.md  InlineObject1.md  InlineObject2.md  InlineObject3.md  InternationalWireRoutingInfoRaw.md  RecipientIdDomesticWireRoutingInfo.md  RecipientIdElectronicRoutingInfo.md  RecipientIdInternationalWireRoutingInfo.md  RecipientsAddress.md  RecipientsElectronicRoutingInfo.md  RecipientsInternationalWireRoutingInfo.md  SubmitOnboardingDataAbout.md  SubmitOnboardingDataBeneficialOwners.md  SubmitOnboardingDataBusinessContactDetails.md  SubmitOnboardingDataFormationDetails.md
examples/: api.rs
src/apis/: configuration.rs  default_api.rs  mod.rs
src/models/: _recipient__id__domestic_wire_routing_info.rs  _recipient__id__electronic_routing_info.rs  _recipient__id__international_wire_routing_info.rs  _recipients_address.rs  _recipients_electronic_routing_info.rs  _recipients_international_wire_routing_info.rs  _submit_onboarding_data_about.rs  _submit_onboarding_data_beneficial_owners.rs  _submit_onboarding_data_business_contact_details.rs  _submit_onboarding_data_formation_details.rs  about.rs  account.rs  address_without_name.rs  beneficial_owner.rs  business_contact_details.rs  domestic_wire_routing_info_raw.rs  electronic_routing_info_raw.rs  formation_details.rs  inline_object.rs  inline_object_1.rs  (+5 more)
