[package]
name = "mercury-bank-api"
version = "1.0.0"
authors = ["Ryan Tate <ryan.michael.tate@gmail.com>"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "2.2"
dotenv = "0.15.0"
envconfig = "0.9.1"
tokio = { version = "1.1.1", features = ["full"]}
chrono = "0.4.19"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "default-tls"]

[dev-dependencies]
